--- a/frontend/themes/choreManager/styles.css
+++ b/frontend/themes/choreManager/styles.css
@@ -140,3 +140,13 @@ html {
     margin: 0;
     padding: 2rem;
 }
+
+.profile_view_container {
+    max-width: 100%;
+    width: 800px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+
+    align-items: end;
+}
